<resources>

    <string name="app_name">FinalProject</string>

    <string name="add_HouseThermostat">add</string>
    <string name="edit_HouseThermostat">edit &amp; save</string>
    <string name="delete_HouseThermostat">delete</string>
    <string name="save_HouseThermostat">save as new</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
   
    <string name="sportMenu">Sport</string>
    <string name="foodMenu">Nutrition</string>
    <string name="houseMenu">Home</string>
    <string name="carMenu">Car</string>

    <!--Food Nutrition!-->
    <string name="foodName">Food Name</string>
    <string name="fd_calsName">Calories</string>
    <string name="fd_fatName">Fat</string>
    <string name="fd_CarboName">Carbohydrate</string>
    <string name="fd_saveText">Save Record</string>
    <string name="fd_Date">Save Date</string>

</resources>
