<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:minHeight="?attr/actionBarSize"
    android:background="@color/primary"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
       >

        <TextView
            android:id="@+id/activityLaunch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_sport_name"
            android:text="@string/sportMenu"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/FoodLaunch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_food_name"
            android:text="@string/foodMenu"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/HouseLaunch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home_name"
            android:text="@string/houseMenu"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/autolaunch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_gas_name"
            android:text="@string/carMenu"
            android:textAlignment="center"
            />

    </LinearLayout>


</android.support.v7.widget.Toolbar>
