<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.example.a29751.finalproject.FoodNutrition">


    <TextView
        android:id="@+id/foodTitle"
        android:layout_width="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/foodMenu"
        android:drawableLeft="@drawable/ic_star_bold"
        android:drawableRight="@drawable/ic_star_bold"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_alignParentTop="true"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foodName"
                android:textColor="@color/primary"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/foodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#33ffcc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fd_calsName"
                android:textColor="@color/primary"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/fd_cals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#33ffcc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/fd_fatName"
                android:textColor="@color/primary"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/fd_fats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#33ffcc" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/fd_CarboName"
                android:textColor="@color/primary"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/fd_cbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#33ffcc" />

        </LinearLayout>

        <Button
            android:id="@+id/fd_saveBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_round"
            android:text="@string/fd_saveText" />
    </LinearLayout>

</LinearLayout>
